removing enable-preview from failsafe and sure file and adding them to properties